syntax = "proto3";

package cart;

option go_package = '/cart';

service CartService {
  rpc AddItem(AddItemReq) returns (AddItemResp) {}
  rpc GetCart(GetCartReq) returns (GetCartResp) {}
  rpc EmptyCart(EmptyCartReq) returns (EmptyCartResp) {}
  rpc UpdateCart(UpdateCartReq) returns (UpdateCartResp) {}
  rpc DeleteItem(DeleteItemReq) returns (DeleteItemResp) {}
}

message CartItem {
  uint32 product_id = 1;
  int32  quantity = 2;
}

message AddItemReq {
  uint32 user_id = 1;
  CartItem item = 2;
}

message AddItemResp {}

message EmptyCartReq {
  uint32 user_id = 1;
}

message GetCartReq {
  uint32 user_id = 1;
}

message GetCartResp {
  Cart cart = 1;
}

message Cart {
  uint32 user_id = 1;
  repeated CartItem items = 2;
}

message EmptyCartResp {}

message UpdateCartReq {
  uint32 user_id = 1;
  CartItem item = 2;
}

message UpdateCartResp {}

message DeleteItemReq {
  uint32 user_id = 1;
  uint32 product_id = 2;
}

message DeleteItemResp {}
